Fix <input> alignment
It turns out I had a non-standard monospace font set as my
default (Monoco instead of Courier), so the alignment of the input box
was slightly off on out-of-the-box Firefoxen.

--- a/src/snippet.css
+++ b/src/snippet.css
@@ -76,7 +76,7 @@ div.snippet img.icon.bounce {
   background: transparent;
   /* Twitter typeahead is pushing it down somehow, so we'll push it
    * back up with this. */
-  margin-top: -1.1em;
+  margin-top: -0.9em;
 }
 
 .snippet .tt-dropdown-menu {
